// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Mex exam package creation with createMex creates a mex with koe-update.zip 1`] = `
[
  {
    "fileName": "exam.xml.bin",
    "uncompressedSize": 8,
  },
  {
    "fileName": "exam.xml.bin.sig",
    "uncompressedSize": 88,
  },
  {
    "fileName": "nsa.zip.bin",
    "uncompressedSize": 16,
  },
  {
    "fileName": "nsa.zip.bin.sig",
    "uncompressedSize": 88,
  },
  {
    "fileName": "koe-update.zip.bin",
    "uncompressedSize": 19,
  },
  {
    "fileName": "koe-update.zip.bin.sig",
    "uncompressedSize": 88,
  },
  {
    "fileName": "koe-update.zip.sig",
    "uncompressedSize": 88,
  },
  {
    "fileName": "rendering.zip.bin",
    "uncompressedSize": 0,
  },
  {
    "fileName": "rendering.zip.bin.sig",
    "uncompressedSize": 88,
  },
  {
    "fileName": "attachments.zip.bin",
    "uncompressedSize": 22,
  },
  {
    "fileName": "attachments.zip.bin.sig",
    "uncompressedSize": 88,
  },
]
`;

exports[`Mex exam package creation with createMex creates a minimal mex with verifyable exam.xml signature 1`] = `
[
  {
    "fileName": "exam.xml.bin",
    "uncompressedSize": 8,
  },
  {
    "fileName": "exam.xml.bin.sig",
    "uncompressedSize": 88,
  },
  {
    "fileName": "nsa.zip.bin",
    "uncompressedSize": 16,
  },
  {
    "fileName": "nsa.zip.bin.sig",
    "uncompressedSize": 88,
  },
  {
    "fileName": "rendering.zip.bin",
    "uncompressedSize": 0,
  },
  {
    "fileName": "rendering.zip.bin.sig",
    "uncompressedSize": 88,
  },
  {
    "fileName": "attachments.zip.bin",
    "uncompressedSize": 22,
  },
  {
    "fileName": "attachments.zip.bin.sig",
    "uncompressedSize": 88,
  },
]
`;

exports[`Mex exam package creation with createMultiMex creates a minimal multimex 1`] = `
[
  {
    "fileName": "exam_a.mex",
    "uncompressedSize": 11,
  },
  {
    "fileName": "exam_b.mex",
    "uncompressedSize": 11,
  },
  {
    "fileName": "nsa.zip.bin",
    "uncompressedSize": 16,
  },
  {
    "fileName": "nsa.zip.bin.sig",
    "uncompressedSize": 88,
  },
  {
    "fileName": "security-codes.json.bin",
    "uncompressedSize": 19,
  },
  {
    "fileName": "security-codes.json.bin.sig",
    "uncompressedSize": 88,
  },
]
`;

exports[`Mex exam package creation with createMultiMex creates a multimex with koe-update.zip 1`] = `
[
  {
    "fileName": "exam_a.mex",
    "uncompressedSize": 11,
  },
  {
    "fileName": "exam_b.mex",
    "uncompressedSize": 11,
  },
  {
    "fileName": "nsa.zip.bin",
    "uncompressedSize": 16,
  },
  {
    "fileName": "nsa.zip.bin.sig",
    "uncompressedSize": 88,
  },
  {
    "fileName": "security-codes.json.bin",
    "uncompressedSize": 19,
  },
  {
    "fileName": "security-codes.json.bin.sig",
    "uncompressedSize": 88,
  },
  {
    "fileName": "koe-update.zip.bin",
    "uncompressedSize": 19,
  },
  {
    "fileName": "koe-update.zip.bin.sig",
    "uncompressedSize": 88,
  },
  {
    "fileName": "koe-update.zip.sig",
    "uncompressedSize": 88,
  },
]
`;
